# allocator

./: .travis.yml  CMakeLists.txt  allocator.cpp  main.cpp
